settings: Export the state of the Bluetooth adapter

So that we can avoid showing filler text when the Bluetooth adapter is
powered off/rfkilled but the overall Bluetooth rfkill is off.

See https://bugzilla.gnome.org/show_bug.cgi?id=760168